--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    color: black;
 }
 
 body {
@@ -12,6 +13,28 @@ body {
     background-color: white;
     width: 100%;
     height: 100%;
+}
+
+.sortbyBtn {
+    font-family: Nunito;
+    font-style: normal;
+    font-size: 1.5rem;
+    line-height: auto;
+    font-weight: bold;
+    float: right;
+}
+
+.sortbyBtn .dropdown-toggle {
+    width: 200px;
+}
+
+.searchbar {
+    border: none;
+}
+
+.formSearch {
+    border: 1px solid black;
+    border-radius: 7px;
 }
 
 .profile-dropdown .dropdown-menu[data-bs-popper] {
@@ -880,6 +903,15 @@ nav {
     object-fit: cover;
     margin: auto;
     position: relative;
+}
+
+.profile-pic-chat {
+    border: none;
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
+    margin: auto;
 }
 
 .btn-edit-profile {
