--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,19 @@ body {
     height: 100%;
 }
 
+.vehicelCategory-wrapper {
+    margin: 30px auto 150px;
+    width: 100%;
+    height: 100%;
+}
+
+.post-vehicel-input {
+    outline: 0;
+    border-width: 0 0 2px;
+    border-color: rgb(65, 65, 65);
+    margin-bottom: 15px;
+}
+
 .history-wrapper {
     margin: 30px auto 100px;
     width: 95%;
@@ -1066,7 +1079,7 @@ nav {
     font-family: Nunito;
     font-style: normal;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1rem;
     align-items: center;
     color: #087E0D;
 }
@@ -1219,6 +1232,43 @@ nav {
     font-size: 1.5rem;
     text-align: center;
     margin-top: 15px;
+}
+
+.text-qty-post-vehicle {
+    width: 50px;
+    height: 25px;
+    border: none;
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 1rem;
+    text-align: center;
+    margin-top: 15px;
+}
+
+.plus-qty-post-vehicle {
+    border-radius: 5px;
+    width: 50px;
+    height: 35px;
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: bolder;
+    font-size: 1rem;
+    color: #393939;
+    margin: 10px auto;
+}
+
+.min-qty-post-vehicle {
+    border-radius: 5px;
+    width: 50px;
+    height: 35px;
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: bolder;
+    font-size: 1rem;
+    color: #393939;
+    background-color: rgba(166, 166, 173, 0.2);
+    margin: 10px auto;
 }
 
 .profile-section {
