--- a/src/components/main/style.css
+++ b/src/components/main/style.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     color: black;
+    text-decoration: none;
 }
 
 body {
@@ -17,10 +18,10 @@ body {
 }
 
 .chat .dropdown-menu[data-bs-popper] {
-    top: 71px;
+    top: 51px;
     left: -300px;
     margin-top: 0.125rem;
-    width: 100%;
+    width: 350px;
     height: auto;
 }
 
@@ -36,7 +37,7 @@ body {
 .chat-nav-text {
     font-family: Poppins;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 300;
     font-size: 0.7rem;
     text-decoration: none;
     color: #000000;
@@ -53,13 +54,19 @@ body {
 .chat-nav-numNotif {
     font-family: Poppins;
     font-style: normal;
-    font-weight:bold ;
+    font-weight: bold;
     font-size: 0.7rem;
     width: 15px;
-height: 15px;
+    height: 15px;
     color: black;
     background-color: #FFCD61;
     border-radius: 100px;
     text-align: center;
-    text-decoration : none;
+    margin: auto;
+    text-decoration: none;
+}
+
+.chat-nav-wrapper {
+    border-bottom: 1px solid rgb(41, 40, 40);
+    border-radius: 0;
 }
