--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,12 @@
     color: black;
 }
 
+a.dropdown-toggle {
+    border: none;
+    outline: none;
+    text-decoration: none;
+}
+
 body {
     font-family: 'Times New Roman', Times, serif;
     color: black;
