--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,16 @@
     color: black;
 }
 
+.imgWidthAdd {
+    width: 300px;
+    height: auto;
+}
+
+.imgWidthAddBig {
+    width: 500px;
+    height: auto;
+}
+
 .input-file-btn label {
     /* color: black; */
     height: 70px;
@@ -84,7 +94,8 @@ body {
     outline: 0;
     border-width: 0 0 2px;
     border-color: rgb(65, 65, 65);
-    margin-bottom: 15px;
+    margin: 30px auto;
+    width: 67%;
 }
 
 .history-wrapper {
@@ -1235,8 +1246,10 @@ nav {
 
 .qty-box {
     width: 100%;
-    height: 100;
+    height: auto;
     border: none;
+    /* margin: 48px auto auto 0; */
+    margin: 33px 17px 50px -92px;
 }
 
 .plus-qty {
