--- a/src/style.css
+++ b/src/style.css
@@ -533,6 +533,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-style: normal;
     font-weight: bold;
     font-size: 1rem;
+    text-align: left;
     color: #FFFFFF;
 }
 
