--- a/src/pages/paymnet/style.css
+++ b/src/pages/paymnet/style.css
@@ -230,16 +230,18 @@
 
 .btn-finish-payment {
     border-radius: 10px;
-    width: 100%;
-    height: 59px;
+    width: 70%;
+    height: 4.5rem;
     font-family: Nunito;
     font-style: normal;
+    line-height: 3em;
     font-weight: bolder;
     font-size: 1.2rem;
     color: #393939;
-    margin: 10px auto;
+    margin: 20px auto 100px;
+    display: block;
     background: #393939;
     box-shadow: 0px 0px 20px rgba(57, 57, 57, 0.47);
     color: #FFCD61;
-    padding: 13px;
+    /* padding: 13px; */
 }
